--- a/src/DevToolkit/package.json
+++ b/src/DevToolkit/package.json
@@ -1,27 +1,11 @@
 {
-  "name": "dev-toolkit",
-  "description": "dev-toolkit",
-  "version": "0.1.0",
-  "homepage": "https://github.com/Binnette/dev-toolkit",
-  "authors": [
-    "Binnette <binnette@gmail.com>"
-  ],
-  "main": "index.html",
-  "keywords": [
-    "TODO"
-  ],
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/h5bp/html5-boilerplate/blob/master/LICENSE.txt"
-    }
-  ],
-  "private": true,
-  "ignore": [
-    "**/.*",
-    "bower_components"
-  ],
-  "dependencies": {
-    "foundation-sites": "^6.2.0"
+  "name": "ASP.NET",
+  "version": "0.0.0",
+  "devDependencies": {
+    "gulp": "3.8.11",
+    "gulp-concat": "2.5.2",
+    "gulp-cssmin": "0.1.7",
+    "gulp-uglify": "1.2.0",
+    "rimraf": "2.2.8"
   }
 }
